components/21-atoms/link/_link.scss
$link-padding: .2em;

%a,
a {
  @include theme('color', 'color-primary', 'link-color');
  @include link-background('color-primary--lighten-4', 'link-background-color');

  padding: $link-padding 0;
  border-radius: border-radius('radius-1');
  font-weight: 600;
  text-decoration: none;
  word-wrap: break-word;

  &:focus {
    outline: thin dotted;
  }

  // Different button link types. These are links styled as a button.
  &.button {
    @include button;
    @include button-icon;
    // Overrule flex for IE
    align-items: flex-start;
    padding-top: .6em;
    background: none;

    &:not([class*="icon"]) {
      @include button-icon;
      @include icon(arrow-right);
    }

    &[href^="http://"]:not(.no-icon),
    &[href^="https://"]:not(.no-icon) {
      @include button-icon;
      @include icon(external-link);
    }

    &[href^="mailto:"]:not(.no-icon) {
      @include button-icon;
      @include icon(envelope);
    }

    &[href^="tel:"]:not(.no-icon) {
      @include button-icon;
      @include icon(phone);
    }

    &[download]:not(.no-icon) {
      @include button-icon;
      @include icon(download);
    }

    &.button-success {
      @extend %button-success;
    }

    &.button-alert {
      @extend %button-alert;
    }

    &.button-dark {
      @extend %button-dark;
    }
  }

  &::before,
  &::after {
    transition: margin .1s ease-in;
    font-size: 1.5em;
    line-height: 1em;
    vertical-align: -25%;
  }

  &:not(.button)::after {
    margin-left: .2rem;
  }

  ///
  /// Stand alone links.
  ///
  &.standalone-link:not(.no-icon) {
    margin-left: 0;
    padding-left: 0;
    background: none;

    &:focus,
    &:hover {
      @include theme('color', 'color-primary--darken-2', 'link-hover-color');

      background-color: transparent;
    }

    &::after {
      vertical-align: middle;
    }
  }

  &.standalone-link:not([href^="mailto:"]):not([href^="tel:"]):not([download]):not([href^="http://"]):not([href^="https://"]):not(.back),
  &.button:not([href^="mailto:"]):not([href^="tel:"]):not([download]):not([href^="http://"]):not([href^="https://"]):not([class*="icon-"]) {
    @extend %a-arrow-animation;
  }


  &.standalone-link:not([href^="mailto:"]):not([href^="tel:"]):not([download]):not([href^="http://"]):not([href^="https://"]):not(.back) {
    @include icon(arrow-right, after);
  }

  ///
  /// Download links.
  ///
  &[download]:not(.no-icon) {
    @include icon(download, after);

    &::after {
      vertical-align: -25%;
    }
  }

  ///
  /// Mail links.
  ///
  &[href^="mailto:"]:not(.no-icon) {
    @include icon(envelope, after);

    &::after {
      vertical-align: -25%;
    }
  }

  ///
  /// Phone links.
  ///
  &[href^="tel:"]:not(.no-icon) {
    @include icon(phone, after);

    &::after {
      vertical-align: -25%;
    }
  }

  ///
  /// External links get an indicator.
  ///
  &[href^="http://"]:not(.no-icon),
  &[href^="https://"]:not(.no-icon) {
    @include icon(external-link, after);

    &::after {
      vertical-align: -25%;
    }

    &[download]:not(.button):not(.no-icon) {
      @include icon(download, after);

      &::after {
        vertical-align: -25%;
      }
    }
  }

  &.back:not(.no-icon) {
    @extend %a-arrow-animation--left;
    @include icon(fancyback, after);

    display: inline-flex;
    flex-direction: row-reverse;
    padding-left: 0;

    &::after {
      margin-left: -.2rem;
      padding-right: .2rem;
      padding-left: .4rem;
    }
  }
}

%a-arrow-animation {
  &::after,
  &::before {
    padding-right: .2rem;
  }

  &:focus,
  &:hover {
    &::after,
    &::before {
      animation: arrow 1s 2;

      // Animation causes pointer flickering in IE.
      @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) { // sass-lint:disable-line no-vendor-prefixes
        animation: none;
      }
    }
  }

  @keyframes arrow {
    0% {
      padding-right: .2rem;
      padding-left: 0;
    }

    40% {
      padding-right: 0;
      padding-left: .2rem;
    }

    100% {
      padding-right: .2rem;
      padding-left: 0;
    }
  }
}

%a-arrow-animation--left {
  &:focus,
  &:hover {
    &::after,
    &::before {
      animation: arrow-left 1s 2;

      // Animation causes pointer flickering in IE.
      @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) { // sass-lint:disable-line no-vendor-prefixes
        animation: none;
      }
    }
  }

  @keyframes arrow-left {
    0% {
      padding-right: .2rem;
      padding-left: .4rem;
    }

    40% {
      padding-right: .4rem;
      padding-left: .2rem;
    }

    100% {
      padding-right: .2rem;
      padding-left: .4rem;
    }
  }
}

///
/// External links other than group Ghent get an indicator.
///
%a-remove-indicator {
  &[href^="http://"],
  &[href^="https://"] {
    &[href*="stad.gent"] {
      &:not([download]):not(.standalone-link)::after {
        content: none;
      }

      ///
      /// Download links.
      ///
      &[download] {
        @include icon(download, after);
      }

      ///
      /// Stand alone links.
      ///
      &.standalone-link:not(.no-icon) {
        @extend %a-arrow-animation;
        @include icon(arrow-right, after);
      }
    }
  }

  &.button {
    &[href^="http://"]:not(.no-icon),
    &[href^="https://"]:not(.no-icon) {
      &[href*="stad.gent"]:not(.no-icon) {
        @extend %a-arrow-animation;
        @include icon(arrow-right);

        &::after {
          content: none;
        }
      }
    }
  }
}

